--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,10 @@ import Addons from "@components/section/Addons.astro";
 import Form from "@components/section/Form.astro";
 import FAQ from "@components/section/FAQ.astro";
 import Footer from "@components/section/Footer.astro";
+import Demo from "@components/section/Demo.astro";
 const { lang = "zh-Hant" } = Astro.props;
 const t = await import(`../i18n/${lang}.json`).then(m => m.default);
-const sections = [Nav, Hero, Intro, About, News, Sponsors, Cycle, Time, Items, Plans, Addons, Form, FAQ, Footer];
+const sections = [Nav, Hero, Demo, Intro, About, News, Sponsors, Cycle, Time, Items, Plans, Addons, Form, FAQ, Footer];
 ---
 
 <html lang={lang}>
@@ -40,16 +41,14 @@ const sections = [Nav, Hero, Intro, About, News, Sponsors, Cycle, Time, Items, P
 			declare const emfont: any;
 			emfont.init();
 
-			const isElementInViewport = (el: Element): boolean => {
-				const rect = el.getBoundingClientRect();
-				return rect.bottom < 0 || rect.top > window.innerHeight;
-			};
-
 			const addClassToVisibleElements = () => {
 				var aosElements = document.querySelectorAll(".aos");
 				aosElements.forEach(aosElement => {
-					if (!isElementInViewport(aosElement)) aosElement.classList.add("appeared");
-					else aosElement.classList.remove("appeared");
+					const rect = aosElement.getBoundingClientRect();
+					const isInViewport = rect.bottom < 0 || rect.top > window.innerHeight;
+					const isOver = rect.bottom < 0;
+					aosElement.classList.toggle("over", isOver);
+					aosElement.classList.toggle("appeared", !isInViewport);
 				});
 			};
 
@@ -78,6 +77,10 @@ const sections = [Nav, Hero, Intro, About, News, Sponsors, Cycle, Time, Items, P
 				color: var(--black);
 			}
 
+			body:has(.show) {
+				overflow: hidden;
+			}
+
 			.aos-fadeIn {
 				opacity: 0;
 				transition: opacity 0.3s ease-out;
@@ -85,6 +88,10 @@ const sections = [Nav, Hero, Intro, About, News, Sponsors, Cycle, Time, Items, P
 
 			.aos-fadeIn.appeared {
 				opacity: 1;
+			}
+
+			section {
+				position: relative;
 			}
 		</style>
 	</body>
